--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     
   </head>
   <body>
-    <div id="root">
+   <div id="root" style="height: 100%"></div>
     </div>
   <script type="text/javascript" src="bundle.js"></script></body>
 </html>
