--- a/public/index.html
+++ b/public/index.html
@@ -9,5 +9,5 @@
   <body>
    <div id="root" style="height: 100%"></div>
     </div>
-  <script type="text/javascript" src="bundle.js"></script></body>
+  <script type="text/javascript" src="/bundle.js"></script></body>
 </html>
