--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>yychan</title>
+    <title>yyychan</title>
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.2/semantic.min.css"
-    
+    <link rel="shortcut icon" href="/favicon.ico"/>
   </head>
   <body>
    <div id="root" style="height: 100%"></div>
