--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
+    
     <title>yyychan</title>
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.2/semantic.min.css"
+     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet" type="text/css">
     <link rel="shortcut icon" href="/favicon.ico"/>
   </head>
   <body>
